2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Synchronization/SyncUtils.cs: Stop looking for bootLocalFile and
	  echoTool; we do not use them (previously used to try to set FUSE to
	  always load).  FindFirstExecutableInPath now searches a few common paths
	  in addition to those found in a user's $PATH.  For now those common
	  paths are /sbin, /bin, and /usr/bin.  This is the first step in fixing
	  bug #484644 and bug #479748.  More work still needs to be done.  For
	  example, if FUSE is enabled it doesn't matter if we can find modprobe or
	  a GUI sudo tool.  Also, the behavior when a GUI sudo tool is not found
	  needs to be tweaked/tested.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp: Added internal dbus-sharp files to MD solution, mostly just
	  for autocomplete convenience.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
	  statements.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
	  statement.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/NoteManager.cs: Backing out fix for bug #449478.  Now the body of
	  the note content is always selected when creating a new note (title is
	  never automatically selected).  This restores the original behavior that
	  people seem to prefer.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Watchers.cs, Tomboy/NoteWindow.cs: Use Buffer.GetSlice () instead
	  of Buffer.GetText () because the GetSlice call accounts for
	  non-character items in the buffer such as pixbufs and widgets.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/figures/tomboy-preferences-synchronization.png: Forgot to add
	  this earlier (thanks to Daniel Nylander for catching this!).

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 
