@@ -1,5 +1,14 @@
 2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/Synchronization/SyncUtils.cs: Only require lsmod for IsFuseEnabled,
+	  and gksu/etc and modprobe for EnableFuse.  Provide appropriate user
+	  feedback when these tools are not available when needed.  Note that on
+	  Fedora and other distros that don't ship a GUI 'su' tool by default, the
+	  user will always receive a "Could not enable FUSE" error dialog until
+	  they set the FUSE module up manually.
+
+2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy/Synchronization/SyncUtils.cs: Stop looking for bootLocalFile and
 	  echoTool; we do not use them (previously used to try to set FUSE to
 	  always load).  FindFirstExecutableInPath now searches a few common paths
